removed unnecessary code + legend update visibility fix

--- a/packages/dino-science-map/src/science-map/science-map.component.sass
+++ b/packages/dino-science-map/src/science-map/science-map.component.sass
@@ -12,6 +12,3 @@
   z-index: 10
   display: inline-block
   visibility: hidden
-
-.label
-  background-color: pink
